[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = "Tool to decrypt/encrypt with Caesar cipher"
authors = ["williamslews <williams.lews@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
